:bug: Fix comments thread overflowing the viewport and displacing comment bubbles

--- a/frontend/resources/styles/main/partials/workspace.scss
+++ b/frontend/resources/styles/main/partials/workspace.scss
@@ -152,16 +152,6 @@ $height-palette-max: 80px;
   }
 }
 
-// .workspace-loader {
-//   display: flex;
-//   justify-content: center;
-//   align-items: center;
-
-//   svg {
-//     fill: $color-gray-50;
-//   }
-// }
-
 .workspace-content {
   background-color: $color-canvas;
   display: flex;
@@ -242,20 +232,22 @@ $height-palette-max: 80px;
 
     .viewport-overlays {
       cursor: initial;
-      height: 100%;
       overflow: hidden;
       pointer-events: none;
       position: absolute;
-      width: 100%;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      right: 0;
       z-index: 10;
 
       .pixel-overlay {
-        height: 100%;
         left: 0;
         pointer-events: initial;
         position: absolute;
         top: 0;
-        width: 100%;
+        right: 0;
+        bottom: 0;
         z-index: 1;
       }
     }
